// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should return a Card 1`] = `
<div
  className="sc-iBYQkv Dobsi"
  shape="SemiRound"
>
  <svg
    className="lucide lucide-alert-circle"
    fill="none"
    height={24}
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={2}
    viewBox="0 0 24 24"
    width={24}
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <line
      x1="12"
      x2="12"
      y1="8"
      y2="12"
    />
    <line
      x1="12"
      x2="12.01"
      y1="16"
      y2="16"
    />
  </svg>
  <div
    className="sc-ftTHYK sc-pyfCe hMniyA egSHlu"
  >
    Card title
  </div>
  <div
    className="sc-kDvujY jbOUMt"
  >
    <p
      style={
        {
          "margin": 0,
        }
      }
    >
      Card content...
    </p>
  </div>
</div>
`;

exports[`Card should return a Rectangle Card 1`] = `
<div
  className="sc-iBYQkv cgkuhG"
  shape="Rectangle"
>
  <svg
    className="lucide lucide-alert-circle"
    fill="none"
    height={24}
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={2}
    viewBox="0 0 24 24"
    width={24}
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <line
      x1="12"
      x2="12"
      y1="8"
      y2="12"
    />
    <line
      x1="12"
      x2="12.01"
      y1="16"
      y2="16"
    />
  </svg>
  <div
    className="sc-ftTHYK sc-pyfCe hMniyA egSHlu"
  >
    Card title
  </div>
  <div
    className="sc-kDvujY jbOUMt"
  >
    <p
      style={
        {
          "margin": 0,
        }
      }
    >
      Card content...
    </p>
  </div>
</div>
`;

exports[`Card should return a Round Card 1`] = `
<div
  className="sc-iBYQkv iSDVSB"
  shape="Round"
>
  <svg
    className="lucide lucide-alert-circle"
    fill="none"
    height={24}
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={2}
    viewBox="0 0 24 24"
    width={24}
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <line
      x1="12"
      x2="12"
      y1="8"
      y2="12"
    />
    <line
      x1="12"
      x2="12.01"
      y1="16"
      y2="16"
    />
  </svg>
  <div
    className="sc-ftTHYK sc-pyfCe hMniyA egSHlu"
  >
    Card title
  </div>
  <div
    className="sc-kDvujY jbOUMt"
  >
    <p
      style={
        {
          "margin": 0,
        }
      }
    >
      Card content...
    </p>
  </div>
</div>
`;

exports[`Card should return a SemiRound Card 1`] = `
<div
  className="sc-iBYQkv Dobsi"
  shape="SemiRound"
>
  <svg
    className="lucide lucide-alert-circle"
    fill="none"
    height={24}
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth={2}
    viewBox="0 0 24 24"
    width={24}
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <line
      x1="12"
      x2="12"
      y1="8"
      y2="12"
    />
    <line
      x1="12"
      x2="12.01"
      y1="16"
      y2="16"
    />
  </svg>
  <div
    className="sc-ftTHYK sc-pyfCe hMniyA egSHlu"
  >
    Card title
  </div>
  <div
    className="sc-kDvujY jbOUMt"
  >
    <p
      style={
        {
          "margin": 0,
        }
      }
    >
      Card content...
    </p>
  </div>
</div>
`;
